--- a/index.html
+++ b/index.html
@@ -1,77 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Longdiv Dev LLC</title>
-    <style>
-        :root {
-            --primary: #2563eb;
-            --text: #1f2937;
-            --bg: #ffffff;
-            --light-bg: #f3f4f6;
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            color: var(--text);
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: var(--bg);
-            border-bottom: 1px solid #e5e7eb;
-            padding: 1rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            top: 0;
-        }
-        h1 { margin: 0; font-size: 1.25rem; }
-        nav a {
-            text-decoration: none;
-            color: var(--text);
-            margin-left: 1.5rem;
-            font-size: 0.9rem;
-        }
-        nav a:hover { color: var(--primary); }
-        .hero {
-            background: var(--primary);
-            color: white;
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-        .hero h2 { font-size: 2.5rem; margin-bottom: 1rem; }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-        section { margin-bottom: 4rem; scroll-margin-top: 80px; }
-        .card {
-            background: var(--light-bg);
-            padding: 2rem;
-            border-radius: 8px;
-            margin-top: 1rem;
-        }
-        footer {
-            text-align: center;
-            padding: 2rem;
-            border-top: 1px solid #e5e7eb;
-            font-size: 0.8rem;
-            color: #6b7280;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <header>
         <h1>Longdiv Dev LLC</h1>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#support">App Support</a>
-            <a href="#privacy">Privacy Policy</a>
+            <a href="index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn">Products &#9662;</button>
+                <div class="dropdown-content">
+                    <a href="re-participation.html">RE Participation</a>
+                </div>
+            </div>
+            <a href="support.html">App Support</a>
         </nav>
     </header>
 
@@ -82,37 +31,33 @@
 
     <div class="container">
         <section>
+            <h3>Our Mission</h3>
+            <p>At Longdiv Dev, we are dedicated to transforming the real estate investment experience through innovative
+                software. Our mission is to create tools that simplify the complex, minimize administrative burdens, and
+                unlock new levels of productivity for investors. We believe your time is your most valuable asset—and it
+                should be spent on growing your portfolio, not getting lost in the weeds. By combining intuitive design
+                with powerful functionality, we build solutions that make investing easier, smarter, and more efficient.
+            </p>
+        </section>
+
+        <section>
             <h3>Our Products</h3>
             <div class="card">
                 <h4>RE Participation App</h4>
-                <p>Longdiv Dev LLC specializes in creating tools that simplify real estate participation and investment tracking. Our flagship app, <strong>RE Participation</strong>, helps investors track material participation hours with ease and precision to ensure tax compliance.</p>
+                <p>Longdiv Dev LLC specializes in creating tools that simplify real estate participation and investment
+                    tracking. Our flagship app, <strong>RE Participation</strong>, helps investors track material
+                    participation hours with ease and precision to ensure tax compliance.</p>
             </div>
         </section>
 
-        <section id="support">
-            <h3>App Support</h3>
-            <p>We are dedicated to supporting our users. If you have technical issues or feature requests for the RE Participation app, please contact us directly.</p>
-            <ul>
-                <li><strong>Email:</strong> admin@longdiv-dev.com</li>
-                <li><strong>Response Time:</strong> We aim to reply within 24 business hours.</li>
-                <li><strong>Business Hours:</strong> Mon-Fri, 9:00 AM - 5:00 PM EST</li>
-            </ul>
-        </section>
 
-        <section id="privacy">
-            <h3>Privacy Policy</h3>
-            <p><em>Last Updated: January 23, 2026</em></p>
-            <p>Longdiv Dev LLC ("we", "our") respects your privacy. This Privacy Policy applies to the RE Participation app.</p>
-            <p><strong>1. Data Collection:</strong> We do not collect, store, or share any personally identifiable information (PII). The app operates entirely locally on your device.</p>
-            <p><strong>2. Data Storage:</strong> All participation logs and user data are stored within your personal iCloud container or local device storage. We do not have access to your data.</p>
-            <p><strong>3. Third Parties:</strong> We do not sell data to third parties.</p>
-            <p><strong>4. Contact:</strong> For privacy concerns, please contact admin@longdiv-dev.com.</p>
-        </section>
-    </div>
 
-    <footer>
-        <p>&copy; 2026 Longdiv Dev LLC. All rights reserved.</p>
-    </footer>
+
+
+        <footer>
+            <p>&copy; 2026 Longdiv Dev LLC. All rights reserved.</p>
+        </footer>
 
 </body>
+
 </html>
