optimize product page

--- a/re-participation.html
+++ b/re-participation.html
@@ -59,39 +59,129 @@
     </div>
 
     <div class="container">
+        <section style="text-align: center; margin-top: 4rem;">
+            <h3>Take Control of Your Tax Strategy</h3>
+            <p>Track Real Estate Participation Hours Securely with Unlimited Uploads.</p>
+        </section>
+
         <section>
             <h3>Key Features</h3>
             <div class="features-list">
+                <!-- Activity & Time Logging -->
                 <div class="feature-item">
-                    <strong>Private & Secure</strong>
-                    <p>No account creation required. All data is encrypted and synced directly through your personal
-                        iCloud account. We never see, sell, or store your data.</p>
+                    <div class="feature-header">
+                        <div class="feature-icon">⏱️</div>
+                        <h4 class="feature-title">Activity & Time Logging</h4>
+                    </div>
+                    <ul class="feature-details">
+                        <li><strong>Detailed Logs:</strong> Record time with details including Date, Duration, Role, and
+                            Category.</li>
+                        <li><strong>Live Log:</strong> Easily start tracking time against a specific property in
+                            real-time.</li>
+                        <li><strong>Visual Timer:</strong> Dedicated interface with pause/resume controls and status
+                            indicators.</li>
+                        <li><strong>Live Activities:</strong> Timer runs in background and is accessible from Lock
+                            Screen/Dynamic Island.</li>
+                        <li><strong>Attachments:</strong> Attach photo evidence or documents to specific logs.</li>
+                    </ul>
                 </div>
+
+                <!-- Property Management & Goals -->
                 <div class="feature-item">
-                    <strong>Unlimited Evidence</strong>
-                    <p>Upload unlimited photos, receipts, and documents to substantiate your logs. Keep your audit trail
-                        robust without worrying about storage limits.</p>
+                    <div class="feature-header">
+                        <div class="feature-icon">🏠</div>
+                        <h4 class="feature-title">Property Management & Goals</h4>
+                    </div>
+                    <ul class="feature-details">
+                        <li><strong>Property Profiles:</strong> Manage a portfolio of real estate properties.</li>
+                        <li><strong>Hourly Goals:</strong> Set specific hourly targets (e.g., 750 hours/year) to track
+                            progress.</li>
+                        <li><strong>Role Separation:</strong> Distinct tracking for "Owner" vs "Other" hours for tax
+                            qualification.</li>
+                    </ul>
                 </div>
+
+                <!-- Dashboard & Analytics -->
                 <div class="feature-item">
-                    <strong>Effortless Logging</strong>
-                    <p>Quickly add logs for any property. Use the Live Activity timer on your Lock Screen to track site
-                        visits in real-time.</p>
+                    <div class="feature-header">
+                        <div class="feature-icon">📊</div>
+                        <h4 class="feature-title">Dashboard & Analytics</h4>
+                    </div>
+                    <ul class="feature-details">
+                        <li><strong>Yearly Overview:</strong> Dashboard groups data by tax year.</li>
+                        <li><strong>Progress Visualization:</strong> Visual bars show actual hours vs set goals.</li>
+                        <li><strong>Stats:</strong> Detailed breakdown of time spent by property and by role.</li>
+                    </ul>
                 </div>
+
+                <!-- Data Export & Reporting -->
                 <div class="feature-item">
-                    <strong>Progress Dashboard</strong>
-                    <p>Stay on top of your hour goal with clear visual breakdowns by property and activity type.</p>
+                    <div class="feature-header">
+                        <div class="feature-icon">📂</div>
+                        <h4 class="feature-title">Data Export & Reporting</h4>
+                    </div>
+                    <ul class="feature-details">
+                        <li><strong>Audit-Ready Exports:</strong> Generate comprehensive reports.</li>
+                        <li><strong>CSV Logs & Summaries:</strong> Detailed line-by-line logs and high-level summaries.
+                        </li>
+                        <li><strong>Attachment Export:</strong> Export all photos/documents organized by date.</li>
+                    </ul>
                 </div>
+
+                <!-- Cloud & Sync -->
                 <div class="feature-item">
-                    <strong>Audit-Proof Exports</strong>
-                    <p>Generate comprehensive CSV reports that bundle your logs with all your attached evidence photos
-                        and receipts—ready for your CPA.</p>
+                    <div class="feature-header">
+                        <div class="feature-icon">☁️</div>
+                        <h4 class="feature-title">Cloud & Sync</h4>
+                    </div>
+                    <ul class="feature-details">
+                        <li><strong>CloudKit Sync:</strong> Seamless synchronization across multiple devices (iPhone,
+                            iPad).</li>
+                        <li><strong>Sync Monitor:</strong> Dedicated UI indicator to show current sync status.</li>
+                    </ul>
                 </div>
             </div>
         </section>
 
-        <section style="text-align: center; margin-top: 4rem;">
-            <h3>Take Control of Your Tax Strategy</h3>
-            <p>Track Real Estate Participation Hours Securely with Unlimited Uploads.</p>
+        <section id="pricing">
+            <h3>Pricing</h3>
+            <div class="card" style="text-align: center; max-width: 700px; margin: 0 auto; padding: 3rem;">
+                <div style="margin-bottom: 2.5rem;">
+                    <span
+                        style="background: #dbeafe; color: #1e40af; padding: 0.25rem 0.75rem; border-radius: 999px; font-weight: 600; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 0.05em;">Risk
+                        Free</span>
+                    <h4 style="font-size: 2rem; margin: 1rem 0 0.5rem; color: #111827;">30-Day Free Trial</h4>
+                    <p style="font-size: 1.1rem; color: #6b7280; max-width: 500px; margin: 0 auto;">Experience the full
+                        power of RE Participation completely free for 30 days.</p>
+                </div>
+
+                <div
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; text-align: left;">
+                    <div
+                        style="padding: 1.5rem; background: #ffffff; border-radius: 0.75rem; border: 2px solid #e5e7eb;">
+                        <h5 style="font-size: 1.25rem; margin: 0 0 1rem; color: #111827;">Subscription</h5>
+                        <ul style="padding-left: 1.2rem; margin: 0; color: #4b5563; line-height: 1.8;">
+                            <li>Monthly Option</li>
+                            <li>Yearly Option <span
+                                    style="color: #059669; font-weight: 600; font-size: 0.85rem; margin-left: 0.25rem;">(Best
+                                    Value)</span></li>
+                            <li>Cancel anytime</li>
+                        </ul>
+                    </div>
+                    <div
+                        style="padding: 1.5rem; background: #eff6ff; border-radius: 0.75rem; border: 2px solid #3b82f6; position: relative; overflow: hidden;">
+                        <div
+                            style="position: absolute; top: 0; right: 0; background: #3b82f6; color: white; font-size: 0.7rem; font-weight: bold; padding: 0.25rem 0.75rem; border-bottom-left-radius: 0.5rem;">
+                            POPULAR</div>
+                        <h5 style="font-size: 1.25rem; margin: 0 0 1rem; color: #1e40af;">Lifetime Access</h5>
+                        <ul style="padding-left: 1.2rem; margin: 0; color: #1e40af; line-height: 1.8;">
+                            <li>One-time payment</li>
+                            <li>Pay once, own it forever</li>
+                            <li>Includes all future updates</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 
