--- a/index.html
+++ b/index.html
@@ -4,7 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Longdiv Dev LLC</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Longdiv Dev LLC - Innovative Real Estate Investment Software</title>
+    <meta name="title" content="Longdiv Dev LLC - Innovative Real Estate Investment Software">
+    <meta name="description"
+        content="Transform your real estate investment experience with innovative software solutions. Track material participation hours, manage properties, and simplify tax compliance with RE Participation App.">
+    <meta name="keywords"
+        content="real estate software, property management, real estate professional status, REPS, material participation, tax compliance, real estate investor tools, property tracking, time logging">
+    <meta name="author" content="Longdiv Dev LLC">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://longdiv-dev.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://longdiv-dev.com/">
+    <meta property="og:title" content="Longdiv Dev LLC - Innovative Real Estate Investment Software">
+    <meta property="og:description"
+        content="Transform your real estate investment experience with innovative software solutions. Track material participation hours, manage properties, and simplify tax compliance.">
+    <meta property="og:site_name" content="Longdiv Dev LLC">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://longdiv-dev.com/">
+    <meta name="twitter:title" content="Longdiv Dev LLC - Innovative Real Estate Investment Software">
+    <meta name="twitter:description"
+        content="Transform your real estate investment experience with innovative software solutions. Track material participation hours, manage properties, and simplify tax compliance.">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareCompany",
+      "name": "Longdiv Dev LLC",
+      "url": "https://longdiv-dev.com",
+      "logo": "https://longdiv-dev.com/photos/AppIcon.png",
+      "description": "Software company specializing in real estate investment tools and property management solutions",
+      "email": "admin@longdiv-dev.com",
+      "foundingDate": "2026",
+      "areaServed": "US",
+      "knowsAbout": ["Real Estate Software", "Property Management", "Tax Compliance", "Investment Tools"],
+      "sameAs": []
+    }
+    </script>
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
