--- a/re-participation.html
+++ b/re-participation.html
@@ -4,7 +4,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RE Participation - Longdiv Dev LLC</title>
+
+    <!-- Primary Meta Tags -->
+    <title>RE Participation App - Track Real Estate Material Participation Hours for REPS</title>
+    <meta name="title" content="RE Participation App - Track Real Estate Material Participation Hours for REPS">
+    <meta name="description"
+        content="Track real estate material participation hours with RE Participation App. Qualify for Real Estate Professional Status (REPS) with secure activity logging, property management, and audit-ready reports. 30-day free trial available.">
+    <meta name="keywords"
+        content="material participation, REPS, real estate professional status, tax qualification, activity tracking, time logging, real estate hours, property management app, tax compliance, IRS audit, real estate investor, participation tracking">
+    <meta name="author" content="Longdiv Dev LLC">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://longdiv-dev.com/re-participation.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://longdiv-dev.com/re-participation.html">
+    <meta property="og:title" content="RE Participation App - Track Real Estate Material Participation Hours">
+    <meta property="og:description"
+        content="Track real estate material participation hours with secure activity logging, property management, and audit-ready reports. Qualify for REPS status with confidence.">
+    <meta property="og:image" content="https://longdiv-dev.com/photos/AppIcon.png">
+    <meta property="og:site_name" content="Longdiv Dev LLC">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://longdiv-dev.com/re-participation.html">
+    <meta name="twitter:title" content="RE Participation App - Track Real Estate Material Participation Hours">
+    <meta name="twitter:description"
+        content="Track real estate material participation hours with secure activity logging, property management, and audit-ready reports. Qualify for REPS status with confidence.">
+    <meta name="twitter:image" content="https://longdiv-dev.com/photos/AppIcon.png">
+
+    <!-- Schema.org Structured Data for Mobile App -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MobileApplication",
+      "name": "RE Participation App",
+      "operatingSystem": "iOS",
+      "applicationCategory": "BusinessApplication",
+      "description": "Track real estate material participation hours for REPS qualification. Secure activity logging, property management, and audit-ready reports.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "priceValidUntil": "2027-12-31",
+        "availability": "https://schema.org/InStock",
+        "description": "30-day free trial available. Subscription and lifetime purchase options."
+      },
+      "creator": {
+        "@type": "Organization",
+        "name": "Longdiv Dev LLC",
+        "url": "https://longdiv-dev.com"
+      },
+      "featureList": [
+        "Activity & Time Logging",
+        "Live Timer with Background Support",
+        "Property Management & Goals",
+        "Dashboard & Analytics",
+        "Audit-Ready CSV Exports",
+        "CloudKit Sync Across Devices",
+        "Photo & Document Attachments"
+      ],
+      "screenshot": [
+        "https://longdiv-dev.com/photos/carousal/01.png",
+        "https://longdiv-dev.com/photos/carousal/02.png",
+        "https://longdiv-dev.com/photos/carousal/03.png"
+      ]
+    }
+    </script>
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
