feat: Introduce a comprehensive, SEO-optimized FAQ page, update navigation links, and add the page to the sitemap.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <a href="re-participation.html">RE Participation</a>
                 </div>
             </div>
+            <a href="faq.html">FAQ</a>
             <a href="support.html">App Support</a>
         </nav>
     </header>
