--- a/re-participation.html
+++ b/re-participation.html
@@ -89,6 +89,7 @@
                     <a href="re-participation.html">RE Participation</a>
                 </div>
             </div>
+            <a href="faq.html">FAQ</a>
             <a href="support.html">App Support</a>
         </nav>
     </header>
